# VIA-Backend

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  design.md  docker-compose.postgres.yml  pyproject.toml  render.yaml  requirements.md  requirements.txt  tasks.md  uso.md
docs/: arquitectura_fisica.puml  cambio_contrato_auth_evaluaciones.md  e2e_postgres_mcda_demo.md  entropia_cross_cultivo.md  evaluation_smoke_test.md  flujo_extraccion_agroambiental.md  flujo_recomendaciones.md  flujo_rulebooks.md  gee_saga_integration.md  gee_smoke_test.md  gemini_api_smoke_test.md  informe_validacion_agronomica_parcela_humalla_sector_izquierdo.md  leaflet_to_gee_mcda_demo.md  llm_smoke_test.md  postgres_validation.md  render_deploy.md  vertex_gemma_smoke_test.md
migrations/: env.py
postman/: VIA_Backend.postman_collection.json
scripts/: cleanup_runtime_state.py  entropy_before_after.py  evaluation_smoke_test.py  extraction_pipeline_evidence.py  gee_smoke_test.py  gemini_api_smoke_test.py  leaflet_to_gee_mcda_demo.py  llm_smoke_test.py  mcda_evidence_export.py  openai_create_vector_stores.py  openai_file_search_smoke_test.py  openai_upload_crop_documents.py  openai_web_search_smoke_test.py  process_outbox_for_evaluation.py  recommendation_case_evidence_export.py  recommendation_evidence_export.py  rulebook_evidence_export.py  run_traceable_e2e_demo.py  seed_admin_user.py  seed_demo_rulebooks.py  seed_diagnostic_rulebooks.py  seed_multivariable_diagnostic_rulebooks.py  seed_potential_viability_rulebooks.py  seed_prod_rulebooks.py  smoke_entropy_eval.py  start_dev.ps1  (+3 more)
(+294 files in other folders)
