[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "via"
version = "0.1.0"
description = "VIA - Viabilidad Inteligente Agricola modular monolith foundation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2",
    "sqlalchemy>=2",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "bcrypt>=4",
    "PyJWT>=2",
    "uvicorn[standard]>=0.30",
    "earthengine-api>=0.1",
    "google-cloud-aiplatform>=1.64",
    "openai>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: tests that need external services or long-running setup",
]

[tool.setuptools.packages.find]
include = ["via*"]
